initial try of mesh plot

--- a/src/geometry/CMakeLists.txt
+++ b/src/geometry/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(GEOMETRY_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(GEOMETRY_SRC
     Mesh.cc
     Mesh2D.cc
+    Mesh3D.cc
 )
 
 #-------------------------------------#
