--- a/src/transport/CMakeLists.txt
+++ b/src/transport/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(TRANSPORT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 SET(TRANSPORT_SRC
     State.cc
+    Equation_DD_2D.cc
 )
 
 #-------------------------------------#
