--- a/src/transport/CMakeLists.txt
+++ b/src/transport/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(TRANSPORT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(TRANSPORT_SRC
     State.cc
     Equation_DD_2D.cc
+    Sweeper2D.cc
 )
 
 #-------------------------------------#
