--- a/src/transport/test/CMakeLists.txt
+++ b/src/transport/test/CMakeLists.txt
@@ -11,6 +11,9 @@ message( "++ Adding detran geometry tests." )
 ADD_EXECUTABLE(test_Equation_DD_2D test_Equation_DD_2D.cc)
 TARGET_LINK_LIBRARIES(test_Equation_DD_2D transport geometry materials utilities)
 
+ADD_EXECUTABLE(test_State test_State.cc)
+TARGET_LINK_LIBRARIES(test_State transport geometry materials utilities)
+
 ADD_EXECUTABLE(test_Sweeper2D test_Sweeper2D.cc)
 TARGET_LINK_LIBRARIES(test_Sweeper2D transport geometry materials utilities)
 
@@ -19,4 +22,5 @@ TARGET_LINK_LIBRARIES(test_Sweeper2D transport geometry materials utilities)
 #------------------------------------------------------------------------------#
 
 ADD_TEST(test_Equation_DD_2D_basic test_Equation_DD_2D 0)
+ADD_TEST(test_State_basic          test_State          0)
 ADD_TEST(test_Sweeper2D_basic      test_Sweeper2D      0)
