--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -23,10 +23,8 @@ ADD_LIBRARY( utilities
              ${UTILITIES_SRC} 
 )
 
-ADD_EXECUTABLE(test_InputDB test_InputDB.cc)
-TARGET_LINK_LIBRARIES( test_InputDB
-                       utilities )
-
+INSTALL_FILES(/include .hh)
+INSTALL_TARGETS(/lib utilities)
 
 #-------------------------------------#
 # PYTHON INTERFACE
@@ -39,6 +37,11 @@ SET_SOURCE_FILES_PROPERTIES(detran_utilities.i PROPERTIES CPLUSPLUS ON)
 SWIG_ADD_MODULE(detran_utilities python detran_utilities.i )
 
 SWIG_LINK_LIBRARIES(detran_utilities ${PYTHON_LIBRARIES} utilities)
+
+INSTALL(FILES ${CMAKE_BINARY_DIR}/utilities/detran_utilities.py
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
+INSTALL(FILES ${CMAKE_BINARY_DIR}/utilities/_detran_utilities.so
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
 
 ENDIF()
 
