--- a/src/transport/CMakeLists.txt
+++ b/src/transport/CMakeLists.txt
@@ -9,11 +9,12 @@ SET(TRANSPORT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 #-------------------------------------#
 
 SET(TRANSPORT_SRC
-    State.cc
+    Boundary.cc
     Equation_DD_2D.cc
     Equation_SC_2D.cc
-    Boundary.cc
+    FissionSource.cc
     ScatterSource.cc
+    State.cc
 )
 
 #-------------------------------------#
