--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -2,4 +2,26 @@
 # libdetran/src/angle/CMakeLists.txt
 #------------------------------------------------------------------------------#
 
+SET_SOURCE_FILES_PROPERTIES(detran.i PROPERTIES CPLUSPLUS ON)
+SWIG_ADD_MODULE(pydetran python detran.i )
+SWIG_LINK_LIBRARIES(pydetran
+                    ${PYTHON_LIBRARIES} 
+                    #
+                    utilities 
+                    #
+                    angle
+                    geometry
+                    materials
+                    #
+                    transport
+                    #
+                    solvers)
+
+# Install the module and library
+INSTALL(FILES ${CMAKE_BINARY_DIR}/python/pydetran.py
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
+INSTALL(FILES ${CMAKE_BINARY_DIR}/python/_pydetran.so
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
+        
+# Install the helper initialization file
 INSTALL_FILES(/python/detran __init__.py)
