--- a/src/geometry/CMakeLists.txt
+++ b/src/geometry/CMakeLists.txt
@@ -38,21 +38,21 @@ INSTALL_TARGETS(/lib geometry)
 # PYTHON INTERFACE
 #-------------------------------------#
 
-IF( DETRAN_ENABLE_PYTHON )
+#IF( DETRAN_ENABLE_PYTHON )
 
-SET_SOURCE_FILES_PROPERTIES(detran_geometry.i PROPERTIES CPLUSPLUS ON)
-SWIG_ADD_MODULE(detran_geometry python detran_geometry.i )
-SWIG_LINK_LIBRARIES(detran_geometry
-                    ${PYTHON_LIBRARIES} 
-                    utilities 
-                    geometry)
+#SET_SOURCE_FILES_PROPERTIES(detran_geometry.i PROPERTIES CPLUSPLUS ON)
+#SWIG_ADD_MODULE(detran_geometry python detran_geometry.i )
+#SWIG_LINK_LIBRARIES(detran_geometry
+#                    ${PYTHON_LIBRARIES} 
+#                    utilities 
+#                    geometry)
 
-INSTALL(FILES ${CMAKE_BINARY_DIR}/geometry/detran_geometry.py
-        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
-INSTALL(FILES ${CMAKE_BINARY_DIR}/geometry/_detran_geometry.so
-        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
+#INSTALL(FILES ${CMAKE_BINARY_DIR}/geometry/detran_geometry.py
+#        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
+#INSTALL(FILES ${CMAKE_BINARY_DIR}/geometry/_detran_geometry.so
+#        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
 
-ENDIF()
+#ENDIF()
 
 #-------------------------------------#
 # TESTING
