--- a/src/material/CMakeLists.txt
+++ b/src/material/CMakeLists.txt
@@ -32,21 +32,21 @@ INSTALL_TARGETS(/lib materials)
 # PYTHON INTERFACE
 #-------------------------------------#
 
-IF( DETRAN_ENABLE_PYTHON )
+#IF( DETRAN_ENABLE_PYTHON )
 
-SET_SOURCE_FILES_PROPERTIES(detran_materials.i PROPERTIES CPLUSPLUS ON)
-SWIG_ADD_MODULE(detran_materials python detran_materials.i )
-SWIG_LINK_LIBRARIES(detran_materials
-                    ${PYTHON_LIBRARIES} 
-                    utilities 
-                    materials)
+#SET_SOURCE_FILES_PROPERTIES(detran_materials.i PROPERTIES CPLUSPLUS ON)
+#SWIG_ADD_MODULE(detran_materials python detran_materials.i )
+#SWIG_LINK_LIBRARIES(detran_materials
+#                    ${PYTHON_LIBRARIES} 
+#                    utilities 
+#                    materials)
 
-INSTALL(FILES ${CMAKE_BINARY_DIR}/material/detran_materials.py
-        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
-INSTALL(FILES ${CMAKE_BINARY_DIR}/material/_detran_materials.so
-        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
+#INSTALL(FILES ${CMAKE_BINARY_DIR}/material/detran_materials.py
+#        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
+#INSTALL(FILES ${CMAKE_BINARY_DIR}/material/_detran_materials.so
+#        DESTINATION ${CMAKE_INSTALL_PREFIX}/python/detran)
 
-ENDIF()
+#ENDIF()
 
 
 
